--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mateus Pinheiro CV</title>
+
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,13 +26,13 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
                     <p class="name">Mateus Pinheiro</p>
-                    <p class="profession">Software Engineer</p>
+                    <p class="profession">Developer Fullstack</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 00 99999-8888</li>
-                        <li><i class="fa fa-envelope"></i>mateus@gmail.com</li>
+                        <li><i class="fa fa-phone"></i>+55 41 996547264</li>
+                        <li><i class="fa fa-envelope"></i>mateus_html@outlook.com.br</li>
                         <li><i class="fa fa-globe"></i>www.mateus.com.br</li>
                         <li><i class="fa fa-github"></i>mateus-dev02</li>
                     </ul>
@@ -31,10 +41,13 @@
                     <p class="left-title">Skills</p>
                     <ul>
                         <li>
-                            <p>HTML, CSS, Git & GitHub</p>
+                            <p>HTML, CSS, JavaScript</p>
                         </li>
                         <li>
-                            <p>Adobe Photoshop and Figma</p>
+                            <p>Git & GitHub</p>
+                        </li>
+                        <li>
+                            <p>Photoshop and Figma</p>
                         </li>
                     </ul>
                 </div>
@@ -45,9 +58,10 @@
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
                     <p class="about-me-contents">
-                        Olá sou o Mateus.<br>
-                        <br> Um pouco mais sobre o que faço
-                        <br> Quais são minhas competências
+                        Olá, me chamo Mateus e desejo colocar em prática todos os conhecimentos adquiridos em meus cursos,
+                        sempre visando o bom relacionamento com todos e ter sempre meus objetivos alinhados com os da empresa.<br>
+                        <br> Sou uma pessoa determinada muito esforçada e bastante atenciosa. Uma pessoa séria e que cumpre muito bem
+                        suas tarefas e sempre procura aprender e contribuir com a equipe para evoluir.
                     </p>
                 </section>
             </div>
@@ -100,6 +114,31 @@
                     </p>
                 </div>
               </div>  
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Junho de 2018</p>
+                    </div >
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-desc">
+                           Curso feito na EBAC no ano de 2018
+                            </p>
+                    </div>
+                                        <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Junho de 2019</p>
+                    </div >
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de Análise de Dados</p>
+                        <p class="awards-desc">
+                           Curso feito na EBAC no ano de 2019
+                        </p>
+                    </div>
+                </div>
             </section>
         </section>
     </main>
